syntax = "proto3";
package core_sdk.v1;

import "google/protobuf/timestamp.proto";
import "common.proto";

option java_package = "com.heap.core_sdk.v1";
option go_package = "core_sdk/v1";

message UserIdentification {
  string env_id = 1;
  string user_id = 2;
  string identity = 3;
  google.protobuf.Timestamp time = 4;
  LibraryInfo library = 5;
}
