syntax = "proto3";
package core_sdk.v1;

import "common.proto";

// User properties that will be attached to a user.
message UserProperties {
  string env_id = 1;
  string user_id = 2;
  map<string, Value> properties = 3;

  DeviceInfo initial_device = 4;
  ApplicationInfo initial_application = 5;
  LibraryInfo library = 6;
  SessionInfo initial_session_info = 7;
}
